--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -50,7 +50,7 @@
                    ${_('Order')}
                   </button>
                 </h2>
-                <div id="collapseOrder" class="accordion-collapse collapse show" aria-labelledby="headingOrder" data-bs-parent="#accordionExample">
+                <div id="collapseOrder" class="accordion-collapse collapse" aria-labelledby="headingOrder" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
                     <label class="list-group-item d-flex" >
                       <input class="form-check-input me-1" type="radio" value="newer" data-facet="order_by" data-value="newer" data-text="${_('Newer')}">
