--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -157,10 +157,10 @@
               </div>
             </div>
             <label for="prices" class="form-label"> </label>
-            <div class=" d-flex justify-content-around">
-              <a id="clear-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#">${_('Clear Filters')}</a>
-              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#">${_('Apply Filters')}</a>
-          </div>
+             <div class="mt-3 d-flex justify-content-around">
+              <a id="clear-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Clear Filters')}</button></a>
+              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Apply Filters')}</button></a>
+            </div>
           </section>
       </div>
       <div class="col-12 col-sm-12 col-md-12 col-xl-9 p-0" id="section-courses">
