feat: add sign to show how many filters are beign used
- adds count how many filters are selected
- adds number to reflex how many filters are apply by filter

--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -68,6 +68,7 @@
                   <h2 class="accordion-header" id="headingYear">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseYear" aria-expanded="false" aria-controls="collapseYear">
                       ${_('Year')}
+                      <p id="year-filter" class="number-filter"></p>
                     </button>
                   </h2>
                   <div id="collapseYear" class="accordion-collapse collapse" aria-labelledby="headingYear" data-bs-parent="#accordionExample">
@@ -81,6 +82,7 @@
                 <h2 class="accordion-header" id="headingState">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseState" aria-expanded="false" aria-controls="collapseState">
                     ${_('State')}
+                    <p id="state-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseState" class="accordion-collapse collapse" aria-labelledby="headingState" data-bs-parent="#accordionExample">
@@ -104,6 +106,7 @@
                 <h2 class="accordion-header" id="headingOrganizations">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOrganizations" aria-expanded="false" aria-controls="collapseOrganizations">
                      ${_('Organizations')}
+                     <p id="classification-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseOrganizations" class="accordion-collapse collapse" aria-labelledby="headingOrganizations" data-bs-parent="#accordionExample">
@@ -116,6 +119,7 @@
                 <h2 class="accordion-header" id="headingCategories">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     ${_('Categories')}
+                    <p id="category-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -128,6 +132,7 @@
                 <h2 class="accordion-header" id="headingPriceRange">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCategories" aria-expanded="false" aria-controls="collapseCategories">
                     ${_('Price range')}
+                    <p id="price-filter" class="number-filter">3</p>
                   </button>
                 </h2>
                 <div id="collapseCategories" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -157,9 +162,9 @@
               </div>
             </div>
             <label for="prices" class="form-label"> </label>
-             <div class="mt-3 d-flex justify-content-around">
+             <div class="mt-3 d-flex justify-content-between">
               <a id="clear-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Clear Filters')}</button></a>
-              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Apply Filters')}</button></a>
+              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons d-flex  align-items-center">${_('Apply Filters')} <p id="total-filter"></p></button></a>
             </div>
           </section>
       </div>
