--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -157,9 +157,9 @@
               </div>
             </div>
             <label for="prices" class="form-label"> </label>
-             <div class="mt-3 d-flex justify-content-around">
+             <div class="mt-3 d-flex justify-content-between">
               <a id="clear-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Clear Filters')}</button></a>
-              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Apply Filters')}</button></a>
+              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons d-flex  align-items-center">${_('Apply Filters')}  (<p id="total-filter"></p>)</button></a>
             </div>
           </section>
       </div>
