--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2443,7 +2443,7 @@ body.view-in-course .course-wrapper, body.view-in-course .profile-wrapper, body.
     border-top-right-radius: 13px;
     background-color: #FAFAFA;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 400;
     line-height: 100%;
 }
 #filter-bar .accordion-item:first-of-type .accordion-button, #filter-bar .accordion-button.collapsed{
@@ -2465,7 +2465,8 @@ body.view-in-course .course-wrapper, body.view-in-course .profile-wrapper, body.
 }
 
 #filter-bar .accordion-button:not(.collapsed){
-    color: #004e98;
+    color: #555E67;
+    font-weight: 700;
 }
 aside .search-facets-lists .form-check-input[type="radio"] {
     border: 1px solid #0d6efd;
@@ -2535,8 +2536,23 @@ aside .search-facets-lists .form-check-input[type="radio"] {
     border: 1px #008852 solid; 
 }
 
+.number-filter{
+	font-size: 10px;
+	background-color: #E3E3E3;
+	border-radius: 34px;
+	height: 1rem;
+	width: 1rem;
+	justify-content: center;
+	display: flex;
+	align-content: start;
+	align-items: center;
+	align-self: center;
+    position: absolute;
+    right: 4rem;
+
+}
+
 #filter-bar #accordion .accordion-button::after{
-    margin-left: 10px;
     background-image: url('/static/open-uchile-theme/images/svg-2023/flecha-vector.svg');
 	width: 30px;
 	background-color: #E3E3E3;
