--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -48,6 +48,7 @@
                 <h2 class="accordion-header" id="headingOrder">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOrder" aria-expanded="true" aria-controls="collapseOrder">
                    ${_('Order')}
+                   <p id="order_by-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseOrder" class="accordion-collapse collapse" aria-labelledby="headingOrder" data-bs-parent="#accordionExample">
@@ -68,6 +69,7 @@
                   <h2 class="accordion-header" id="headingYear">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseYear" aria-expanded="false" aria-controls="collapseYear">
                       ${_('Year')}
+                      <p id="year-filter" class="number-filter"></p>
                     </button>
                   </h2>
                   <div id="collapseYear" class="accordion-collapse collapse" aria-labelledby="headingYear" data-bs-parent="#accordionExample">
@@ -81,6 +83,7 @@
                 <h2 class="accordion-header" id="headingState">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseState" aria-expanded="false" aria-controls="collapseState">
                     ${_('State')}
+                    <p id="state-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseState" class="accordion-collapse collapse" aria-labelledby="headingState" data-bs-parent="#accordionExample">
@@ -104,6 +107,7 @@
                 <h2 class="accordion-header" id="headingOrganizations">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOrganizations" aria-expanded="false" aria-controls="collapseOrganizations">
                      ${_('Organizations')}
+                     <p id="classification-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseOrganizations" class="accordion-collapse collapse" aria-labelledby="headingOrganizations" data-bs-parent="#accordionExample">
@@ -116,6 +120,7 @@
                 <h2 class="accordion-header" id="headingCategories">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     ${_('Categories')}
+                    <p id="category-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -128,6 +133,7 @@
                 <h2 class="accordion-header" id="headingPriceRange">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCategories" aria-expanded="false" aria-controls="collapseCategories">
                     ${_('Price range')}
+                    <p id="price-filter" class="number-filter">3</p>
                   </button>
                 </h2>
                 <div id="collapseCategories" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
