--- a/lms/templates/courseware/courses.html
+++ b/lms/templates/courseware/courses.html
@@ -48,7 +48,6 @@
                 <h2 class="accordion-header" id="headingOrder">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOrder" aria-expanded="true" aria-controls="collapseOrder">
                    ${_('Order')}
-                   <p id="order_by-filter" class="number-filter"></p>
                   </button>
                 </h2>
                 <div id="collapseOrder" class="accordion-collapse collapse" aria-labelledby="headingOrder" data-bs-parent="#accordionExample">
@@ -165,7 +164,7 @@
             <label for="prices" class="form-label"> </label>
              <div class="mt-3 d-flex justify-content-between">
               <a id="clear-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons">${_('Clear Filters')}</button></a>
-              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons d-flex  align-items-center">${_('Apply Filters')}  (<p id="total-filter"></p>)</button></a>
+              <a id="apply-filters" class="d-flex justify-content-center p-1 m-0 align-items-center" href="#"><button class="filter-buttons d-flex  align-items-center">${_('Apply Filters')} <p id="total-filter"></p></button></a>
             </div>
           </section>
       </div>
