fix(fixup): remove bax-shadow from clear filter button

--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -2498,6 +2498,7 @@ aside .search-facets-lists .form-check-input[type="radio"] {
     border: 1px #172C6B solid; 
     color: #172C6B;
     font-weight: 400;
+    box-shadow: none;
 }
 .filter-buttons{
     text-shadow: none;
