--- a/lms/static/css/openuchile.css
+++ b/lms/static/css/openuchile.css
@@ -97,10 +97,6 @@ img.openuchile-header {
     margin: 0 20px 20px 0;
 }
 
-/*.navbar .nav-item .nav-link {
-    border-bottom: .25rem solid transparent;
-}*/
-
 .navbar .nav-item .nav-link.active {
     color: #0075b4;
 }
@@ -277,45 +273,29 @@ footer#openuchile-footer img:hover {
     margin-right: 1em;
 }
 
-.courses-list .card,
-#open-carousel-courses .card  {
-    /* background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    min-height: 300px;
-    max-height: 300px; */
+.courses-list .card {
     border: none;
     box-shadow: 0 0 11px 8px rgba(0,0,0,0.14);
     padding: 10px;
 }
 
-.courses-list .card.inactive,
-#open-carousel-courses .card.inactive{
+.courses-list .card.inactive{
     filter: grayscale(90%);
 }
 
-/*.courses-list .card .card-body {
-    min-height: 0px;
-    padding: 0px;
-}*/
-
-.courses-list .card .card-footer,
-#open-carousel-courses .card .card-footer {
-    background-color: #172c6b;
-    /* opacity: 0.9; */
+.courses-list .card .card-footer{
+    background-color: var(--primary-color);
     line-height: 1.2;
     font-size: 0.8em;
     height: 100px;
     overflow: hidden;
 }
 
-.courses-list .card .card-footer .course-name,
-#open-carousel-courses .card .card-footer .course-name {
+.courses-list .card .card-footer .course-name{
     font-size: 1.2em;
 }
 
-.courses-list .card .card-date,
-#open-carousel-courses .card .card-date {
+.courses-list .card .card-date{
     background-color: #C3DDE8;
     padding: 0 1.25rem;
     color: #515151;
@@ -325,55 +305,43 @@ footer#openuchile-footer img:hover {
 
 .courses-list .card:not(:hover) .card-desc,
 .courses-list .card:not(:hover) .card-desc p,
-.courses-list .card:not(:hover) .card-desc .card-button,
-#open-carousel-courses .card:not(:hover) .card-desc,
-#open-carousel-courses .card:not(:hover) .card-desc p,
-#open-carousel-courses .card:not(:hover) .card-desc .card-button  {
+.courses-list .card:not(:hover) .card-desc .card-button {
     height: 0px;
     opacity: 0;
     padding: 0;
 }
 
-.courses-list .card:not(:hover) .card-desc .card-button .btn,
-#open-carousel-courses .card:not(:hover) .card-desc .card-button .btn {
+.courses-list .card:not(:hover) .card-desc .card-button .btn{
     display: none;
 }
 
-.courses-list .card .card-desc,
-#open-carousel-courses .card .card-desc {
-    background-color: #172c6b;
-    /* opacity: 0.9; */
+.courses-list .card .card-desc{
+    background-color: var(--primary-color);
     padding: .75rem 1.25rem;
 }
 
-.courses-list .card .card-desc p,
-#open-carousel-courses .card .card-desc p {
+.courses-list .card .card-desc p{
     height: 100px;
     font-size: 0.8em;
     overflow: hidden;
     text-overflow: -o-ellipsis-lastline;
 }
 
-.courses-list .card .card-desc .card-button,
-#open-carousel-courses.card .card-desc .card-button {
+.courses-list .card .card-desc .card-button{
     max-height: 80px;
 }
 
-.courses-list .card:hover .card-desc,
-#open-carousel-courses .card:hover .card-desc {
+.courses-list .card:hover .card-desc{
     height: 180px;
     transition: height .2s;
 }
 
 .courses-list .card:hover .card-desc p,
-.courses-list .card:hover .card-desc .card-button,
-#open-carousel-courses .card:hover .card-desc p,
-#open-carousel-courses .card:hover .card-desc .card-button {
+.courses-list .card:hover .card-desc .card-button{
     transition: opacity 0.7s;
 }
 
-.courses-list .card .card-desc .card-button button.btn,
-#open-carousel-courses .card .card-desc .card-button button.btn {
+.courses-list .card .card-desc .card-button button.btn {
     background-color: #FFFF !important;
     color: #172c6b !important;
     background-image: none !important;
@@ -382,8 +350,7 @@ footer#openuchile-footer img:hover {
     font-family: "Trebuchet MS" !important;
 }
 
-.courses-list .card .card-desc .card-button button.btn:hover,
-#open-carousel-courses .card .card-desc .card-button button.btn:hover {
+.courses-list .card .card-desc .card-button button.btn:hover{
     color: black !important;
 }
 
@@ -891,7 +858,6 @@ input[type="search"]::-ms-input-placeholder {
     color: #fff;
     text-align: center;
     font-weight: 1000;
-    /*font-family: 'Exo 2', sans-serif;*/
     text-transform: uppercase;
     display: contents;
 }
@@ -968,18 +934,13 @@ ul.courses-list{
     padding: 0;
     list-style-type: none;
 }
-.courses-list .card,
-#open-carousel-courses .card {
+.courses-list .card{
     box-shadow: 0px 0px 8px 4px rgba(0,0,0,0.15);
 }
 .courses-list .card-button button,
 .courses-list .card-button button:hover,
 .courses-list .card-button button:active,
-.courses-list .card-button button:focus,
-#open-carousel-courses .card-button button,
-#open-carousel-courses .card-button button:hover,
-#open-carousel-courses .card-button button:active,
-#open-carousel-courses .card-button button:focus{
+.courses-list .card-button button:focus{
     background: #004e98;
     background-color: #004e98;
     background-image: none;
@@ -997,34 +958,14 @@ ul.courses-list{
     border-radius: .25rem;
 }
 
-#open-carousel-courses .card-img-top {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    min-height: 185px;
-}
-.courses-list .col-md-7,
-#open-carousel-courses .col-md-7{
+.courses-list .col-md-7{
     padding-right: 5px;
 }
-.courses-list .col-md-5,
-#open-carousel-courses .col-md-5
+.courses-list .col-md-5
 {
     padding-left: 5px;
 }
-#open-carousel-courses .card-body{
-    padding: 0;
-    padding-top: 10px;
-    display: flex;
-    flex-direction: column;
-    height: 278px;
-}
-#open-carousel-courses .card-body{
-    height: 100%;
-}
-.courses-list .card-body .card-title,
-#open-carousel-courses .card-body .card-title{
-    /*height: 46px;*/
+.courses-list .card-body .card-title{
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -1034,14 +975,12 @@ ul.courses-list{
     max-height: 46px;
     height: 46px;
 }
-.courses-list .card-body .card-logo,
-#open-carousel-courses .card-body .card-logo{
+.courses-list .card-body .card-logo{
     width: 130px;
     margin-left: auto;
     margin-bottom: 10px;
 }
-.courses-list .card-body .ct1,
-#open-carousel-courses .card-body .ct1{
+.courses-list .card-body .ct1{
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -1052,8 +991,7 @@ ul.courses-list{
     text-transform: uppercase;
     height: 17px;
 }
-.courses-list .card-body .ct2,
-#open-carousel-courses .card-body .ct2{
+.courses-list .card-body .ct2{
     overflow: hidden;
     margin-top: 10px;
     margin-bottom: auto;
@@ -1068,17 +1006,13 @@ ul.courses-list{
 .courses-list .card-body .ct3 .col-md-6 .row{
     display: contents;
 }
-.courses-list .card-body .ct3,
-#open-carousel-courses .card-body .ct3{
+.courses-list .card-body .ct3{
     margin: auto;
     text-align: center;
-    /*padding: 0 5px;*/
-    /*margin-top: 30px;*/
     margin-bottom: 5px;
     font-size: 13px;
 }
-.courses-list .card-body .ct3 .col-md-12,
-#open-carousel-courses .card-body .ct3 .col-md-12{
+.courses-list .card-body .ct3 .col-md-12{
     padding: 0;
     display: flex;
     flex-direction: row;
@@ -1087,48 +1021,38 @@ ul.courses-list{
     height: 55px;
 }
 .courses-list .card-body .ct3 .col-md-12 .open-course-date-icon,
-.courses-list .card-body .ct3 .col-md-6 .open-course-date-icon,
-#open-carousel-courses .card-body .ct3 .col-md-12 .open-course-date-icon,
-#open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-icon{
+.courses-list .card-body .ct3 .col-md-6 .open-course-date-icon{
     width: 35px;
 }
 .courses-list .card-body .ct3 .col-md-12 .open-course-date-icon img,
-.courses-list .card-body .ct3 .col-md-6 .open-course-date-icon img,
-#open-carousel-courses .card-body .ct3 .col-md-12 .open-course-date-icon img,
-#open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-icon img{
+.courses-list .card-body .ct3 .col-md-6 .open-course-date-icon img{
     width: 35px;
 }
-.courses-list .card-body .ct3 .col-md-12 .open-course-date-text,
-#open-carousel-courses .card-body .ct3 .col-md-12 .open-course-date-text{
+.courses-list .card-body .ct3 .col-md-12 .open-course-date-text{
     text-align: left;
     margin-left: 8px;
 }
-.courses-list .card-body .ct3 .col-md-6,
-#open-carousel-courses .card-body .ct3 .col-md-6{
+.courses-list .card-body .ct3 .col-md-6{
     padding: 0;
     display: flex;
     flex-direction: row;
     align-items: center;
     height: 55px;
 }
-.courses-list .card-body .ct3 .col-md-6 .open-course-date-text,
-#open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-text{
+.courses-list .card-body .ct3 .col-md-6 .open-course-date-text{
     display: flex;
     flex-direction: column;
     text-align: left;
     margin-left: 8px;
 }
-.courses-list .card-body .ct3 .col-md-6 .open-course-date-text span,
-#open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-text span{
+.courses-list .card-body .ct3 .col-md-6 .open-course-date-text span{
     font-weight: bolder;
 }
 
-.courses-list .card-body .ct3 .col-md-6 .open-course-date-text .course-date,
-#open-carousel-courses .card-body .ct3 .col-md-6 .open-course-date-text .course-date {
+.courses-list .card-body .ct3 .col-md-6 .open-course-date-text .course-date{
     font-weight: bolder;
 }
-.courses-list .card-body .card-button,
-#open-carousel-courses .card-body .card-button{
+.courses-list .card-body .card-button{
     text-align: center;
     margin-top: 10px;
 }
@@ -1136,33 +1060,6 @@ ul.courses-list{
 
 #open-carousel{
     max-height: 560px;
-}
-#open-carousel-courses .carousel-inner{
-    box-shadow: 0 0 11px 8px rgba(0,0,0,0.2);
-}
-@media screen and (min-width: 768px) {
-    #open-carousel-courses{
-      padding-top: 50px;
-      padding-bottom: 50px;
-      width: 70%;
-      margin: auto;
-    }
-    #open-carousel-courses .carousel-control-prev {
-      width: auto;
-      margin-left: -40px;
-    }
-
-    #open-carousel-courses .carousel-control-next {
-      width: auto;
-      margin-right: -40px;
-    }
-    #open-carousel-courses .carousel-control-prev-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23565656'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e") !important;
-    }
-
-    #open-carousel-courses .carousel-control-next-icon {
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23565656'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
-    }
 }
 
 .find-courses{
@@ -1262,13 +1159,9 @@ ul.courses-list{
     background-image: none !important;
     border-color: white;
     box-shadow: none !important;
-    /*display: inline-flex;*/
     color: #565656;
     font-size: 30px;
     padding: 0;
-    /*width: 60px;
-    margin-top: 5px;
-    position: absolute;*/
 }
 
 .open-discovery-input{
@@ -1632,9 +1525,7 @@ aside h2.open-refine-search{
   .owl-nav > button, .owl-nav > button:active, .owl-nav > button:focus{
     border-radius: 0;
     box-shadow: none;
-    /*margin-top: -38px;*/
     position: absolute;
-    /*top: 50%;*/
     top: 18%;
     color: #cdcbcd !important;
     text-shadow: none !important;
